# trx-viewer-app

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
assets/: icon.icns
src/: app.rs  main.rs
src/app/: callbacks.rs  dirty_updates.rs  file_loading.rs  helpers.rs  mod.rs  state.rs  workflow.rs
src/app/ui/: import_dialog.rs  menu_bar.rs  merge_streamlines_dialog.rs  mod.rs  overlays.rs  sidebar.rs  viewer.rs  workspace.rs
src/app/workflow/: defaults.rs  evaluate.rs  fingerprint.rs  graph_viewer.rs  jobs.rs  mod.rs  project_io.rs  types.rs
src/data/: bundle_mesh.rs  gifti_data.rs  loaded_files.rs  mod.rs  nifti_data.rs  orientation_field.rs  parcellation_data.rs  trx_data.rs
src/renderer/: camera.rs  glyph_renderer.rs  mesh_renderer.rs  mod.rs  slice_renderer.rs  streamline_renderer.rs
src/shaders/: bundle_mesh.wgsl  glyph.wgsl  mesh.wgsl  slice.wgsl  streamline.wgsl  tube.wgsl
